chore: update babel dependencies to latest security patch
Ticket: DX-1512

--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "private": true,
   "license": "Apache-2.0",
   "devDependencies": {
-    "@babel/core": "^7.17.8",
-    "@babel/preset-env": "^7.16.11",
+    "@babel/core": "^7.28.0",
+    "@babel/preset-env": "^7.28.0",
     "@commitlint/cli": "^19.4.0",
     "@commitlint/config-conventional": "^19.2.2",
     "@types/lodash": "^4.14.151",
@@ -66,6 +66,8 @@
     "@solana/web3.js": "1.95.8",
     "**/nise/**/path-to-regexp": "8.0.0",
     "**/express/**/path-to-regexp": "0.1.12",
+    "@babel/runtime": "^7.28.2",
+    "@babel/helpers": "^7.28.2",
     "buffer": "^6.0.3",
     "body-parser": "1.20.3",
     "degenerator": "5.0.0",
