--- a/modules/sdk-coin-avaxp/package.json
+++ b/modules/sdk-coin-avaxp/package.json
@@ -59,5 +59,8 @@
     "lodash": "^4.17.14",
     "safe-buffer": "^5.2.1"
   },
+  "resolutions": {
+    "sha.js": "^2.4.12"
+  },
   "gitHead": "18e460ddf02de2dbf13c2aa243478188fb539f0c"
 }
