--- a/modules/sdk-coin-celo/package.json
+++ b/modules/sdk-coin-celo/package.json
@@ -59,7 +59,8 @@
     "@bitgo/sdk-test": "^9.0.3"
   },
   "resolutions": {
-    "form-data": "^4.0.4"
+    "form-data": "^4.0.4",
+    "sha.js": "^2.4.12"
   },
   "gitHead": "18e460ddf02de2dbf13c2aa243478188fb539f0c"
 }
