--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "https-browserify": "^1.0.0",
     "husky": "^8.0.1",
     "improved-yarn-audit": "^3.0.0",
-    "lerna": "^5.5.0",
+    "lerna": "^8.2.1",
     "lint-staged": "^12.4.1",
     "make-dir": "^3.1.0",
     "mocha": "^9.2.0",
@@ -56,7 +56,7 @@
     "webpack": "5.98.0",
     "webpack-cli": "^4.9.1",
     "yargs": "^17.7.2",
-    "yeoman-generator": "^5.6.1"
+    "yeoman-generator": "^7.4.0"
   },
   "resolutions": {
     "**/sha.js": ">=2.4.12",
@@ -95,7 +95,9 @@
     "form-data": "^4.0.4",
     "**/avalanche/**/ws": "8.18.3",
     "**/ethers/**/ws": "7.5.10",
-    "**/swarm-js/**/ws": "5.2.4"
+    "**/swarm-js/**/ws": "5.2.4",
+    "**/lerna/**/@octokit/request-error": "5.1.1",
+    "**/yeoman-generator/**/@octokit/request-error": "6.1.8"
   },
   "workspaces": [
     "modules/*"
