fix(account-lib): gRPC Memory Allocation Vulnerability fix gRPC Memory Allocation Vulnerability Ticket: DX-1515

--- a/package.json
+++ b/package.json
@@ -97,7 +97,8 @@
     "**/avalanche/**/ws": "8.18.3",
     "**/ethers/**/ws": "7.5.10",
     "**/swarm-js/**/ws": "5.2.4",
-    "serialize-javascript": "^6.0.2"
+    "serialize-javascript": "^6.0.2",
+    "@grpc/grpc-js": "^1.12.6"
   },
   "workspaces": [
     "modules/*"
