--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "web3-utils": "4.2.1",
     "@polkadot/api": "14.1.1",
     "elliptic": "^6.6.1",
+    "cookie": "^0.7.1",
     "axios": "^1.11.0",
     "canvg": "4.0.3",
     "**/stellar-sdk/**/bignumber.js": "4.1.0",
