--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "lerna": "^5.5.0",
     "lint-staged": "^12.4.1",
     "make-dir": "^3.1.0",
-    "mocha": "^9.2.0",
+    "mocha": "^10.6.0",
     "nock": "^13.3.1",
     "nyc": "^15.1.0",
     "parse-url": "^8.1.0",
@@ -96,7 +96,8 @@
     "form-data": "^4.0.4",
     "**/avalanche/**/ws": "8.18.3",
     "**/ethers/**/ws": "7.5.10",
-    "**/swarm-js/**/ws": "5.2.4"
+    "**/swarm-js/**/ws": "5.2.4",
+    "serialize-javascript": "^6.0.2"
   },
   "workspaces": [
     "modules/*"
