--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "lerna": "^5.5.0",
     "lint-staged": "^12.4.1",
     "make-dir": "^3.1.0",
-    "mocha": "^9.2.0",
+    "mocha": "10.6.0",
     "nock": "^13.3.1",
     "nyc": "^15.1.0",
     "parse-url": "^8.1.0",
