fix: force request to use @cypress/request@3.0.9 to address security vulnerability
Updates package.json resolutions to use @cypress/request@3.0.9 instead of
the deprecated request package. This addresses the security vulnerability
GHSA-p8p7-x288-28g6

TICKET: DX-1558

--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "**/swarm-js/**/ws": "5.2.4",
     "serialize-javascript": "^6.0.2",
     "@grpc/grpc-js": "^1.12.6",
+    "request": "npm:@cypress/request@3.0.9",
     "**/avalanche/store2": "2.14.4"
   },
   "workspaces": [
