--- a/.iyarc
+++ b/.iyarc
@@ -4,4 +4,4 @@
 # - This CVE affects archive EXTRACTION (unpacking malicious symlinks/hardlinks)
 # - Lerna only uses tar for PACKING
 GHSA-8qq5-rm4j-mr97
-
+GHSA-r6q2-hw4h-h46w
