feat/WIN-8782-onboard-agri-usdca-ags-aus-reya-perp-usdp-grtx: onboard 8 new tokens as ungated tokens - verified
Onboard the following tokens:
- SOL:AGRI (AgriDex)
- SOL:USDC.a (USDC.a Bridged ART20)
- ETH:AGS (Silver Standard)
- ETH:AUS (Gold Standard)
- ETH:REYA (Reya)
- OPETH:PERP (Perpetual Protocol)
- ETH:USDP (USDP Stablecoin)
- ETH:GRTX (GreatX)

Add tar resolution to fix security vulnerability (GHSA-34x7-hfp2-rc4v).
Fix Prettier formatting in ofcErc20Coins.ts.

CLOSES TICKET: WIN-8782

--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "**/ethers/**/ws": "7.5.10",
     "**/swarm-js/**/ws": "5.2.4",
     "**/swarm-js/**/tar": "6.2.1",
+    "tar": "^6.1.11",
     "serialize-javascript": "^6.0.2",
     "@grpc/grpc-js": "^1.12.6",
     "bigint-buffer": "npm:@trufflesuite/bigint-buffer@1.1.10",
