--- a/package.json
+++ b/package.json
@@ -114,7 +114,8 @@
     "webpack-dev-server": "5.2.1",
     "memfs": "4.46.0",
     "**/iota-sdk/**/valibot": "1.2.0",
-    "**/tronweb/**/validator": "13.15.23"
+    "**/tronweb/**/validator": "13.15.23",
+    "@isaacs/brace-expansion": "5.0.1"
   },
   "workspaces": [
     "modules/*"
